# CW6_1

./: .env.sample  README.md  auth  groups.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_detail.html
client/: admin.py  models.py  urls.py  views.py
client/migrations/: 0001_initial.py  0002_client_creator.py
client/templates/client/: client_confirm_delete.html  client_detail.html  client_form.html  client_list.html
config/: settings.py  urls.py
mailing/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: start_mails.py
mailing/migrations/: 0001_initial.py  0002_mailingparameters_status.py  0003_remove_mailingparameters_is_active_and_more.py  0004_alter_mailingparameters_next_date.py  0005_alter_mailingparameters_next_date_and_more.py  0006_alter_mailingparameters_next_date_and_more.py  0007_alter_mailingparameters_interval_and_more.py  0008_mailingparameters_creator_message_creator_and_more.py  0009_alter_mailingparameters_interval_and_more.py  0010_alter_mailingparameters_end_time_and_more.py  0011_alter_mailingparameters_options_and_more.py  0012_alter_mailingparameters_end_time.py  0013_alter_mailingparameters_end_time.py
mailing/templates/mailing/: base.html  index.html  logs_list.html  mailingparameters_confirm_delete.html  mailingparameters_detail.html  mailingparameters_form.html  (+4 more)
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
(+3 files in other folders)
