[tool.poetry]
name = "cw6-1"
version = "0.1.0"
description = ""
authors = ["finka759"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.9"
django-apscheduler = "^0.6.2"
pillow = "^10.3.0"
django = "4.2.2"
redis = "^5.0.7"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
